--- a/.github/workflows/vrt-test.yml
+++ b/.github/workflows/vrt-test.yml
@@ -12,11 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: run circle ci
-        env:
-          CIRCLE_TOKEN: ${{ secrets.CIRCLE_TOKEN }}
         run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -H "Circle-Token: ${CIRCLE_TOKEN}" \
+          curl -X POST \
+          -H "Content-Type: application/json" \
+          -H "Circle-Token: ${{ secrets.CIRCLE_TOKEN }}" \
           -d "{\"branch\": \"${{ github.head_ref }}\" , \"parameters\": {\"target-branch\": \"${{ github.base_ref }}\", \"pr-number\": ${{ github.event.pull_request.number }} } }" \
           https://circleci.com/api/v2/project/github/SnowDango/sumire/pipeline
     env:
