--- a/.github/workflows/deploygate-release.yml
+++ b/.github/workflows/deploygate-release.yml
@@ -55,4 +55,4 @@ jobs:
             ./app/build/outputs/apk/release/app-release.apk
             ./app/build/outputs/bundle/release/app-release.aab
           make_latest: true
-
+          generate_release_notes: true
